--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>gitの練習</title>
+   <meta charset="UTF-8">
+   <title>Gitの練習</title>
 </head>
 <body>
-    <h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
+   <h1>Hello world</h1>
 </body>
 </html>
